Onnx types. Simplify result type.